@@ -6564,4 +6564,5 @@ PACKAGE: 2.2.99.2
  * Added a config option 'max_history_width' to control the width of XML diffs
     on the History screen, fixing #3146
  * Set the character encoding in MIME emails to UTF8, fixing #3150
+ * Added 'Save for Later' button to deposit screen, fixing #3071
 
